test editing homepage

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,10 @@
 ---
-title: Welcome to Middleman
+title: Welcome to bRionZ MM
 ---
 
 <div class="welcome">
-  <h1>Middleman is Watching</h1>
+  <h1>Welcome to Oka bRionZ MM</h1>
   <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
+    <%= link_to "MM Documentation", "http://middlemanapp.com/" %> <% link_to "Oka bRionZ Blog", "http://blog.okabrionz.com/" %>
   </p><!-- .doc -->
 </div><!-- .welcome -->
