--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,6 +5,6 @@ title: Welcome to bRionZ MM
 <div class="welcome">
   <h1>Welcome to Oka bRionZ MM</h1>
   <p class="doc">
-    <%= link_to "MM Documentation", "http://middlemanapp.com/" %> <% link_to "Oka bRionZ Blog", "http://blog.okabrionz.com/" %>
+    <%= link_to "MM Documentation", "http://middlemanapp.com/" %> <%= link_to "bRionZ Blog", "http://blog.okabrionz.com/" %>
   </p><!-- .doc -->
 </div><!-- .welcome -->
