--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,7 +8,7 @@ title: Welcome to bRionZ MM
     <a href="#home" class="nav-link active">Home</a>
   </li>
   <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Categories</a>
+    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Learn Codes</a>
     <div class="dropdown-menu">
       <a class="dropdown-item" href="#github">Github</a>
       <a class="dropdown-item" href="#ng">Angular</a>
@@ -22,12 +22,14 @@ title: Welcome to bRionZ MM
 </ul>
 
 <!-- Tab panes -->
+<div class="container-fluid">
 <div class="tab-content">
-  <div class="tab-pane fade in active" id="home" role="tabpanel">asd</div>
+  <div class="tab-pane fade in active" id="home" role="tabpanel">lorem</div>
   <div class="tab-pane fade" id="github" role="tabpanel">fgg</div>
   <div class="tab-pane fade" id="ng" role="tabpanel">hhj</div>
   <div class="tab-pane fade" id="react" role="tabpanel">as2ss</div>
   <div class="tab-pane fade" id="laravel" role="tabpanel">erwqe</div>
+</div>
 </div>
 
 <script>
